@startuml ChatApp_DTOs
'==============================================================
' Diagrama 7: DTO-uri (records) - contractele API
' Organizat in 3 randuri orizontale, fiecare cu o categorie
'==============================================================

skinparam monochrome true
skinparam shadowing false
skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam defaultFontName "Arial"
skinparam packageStyle rectangle
skinparam nodesep 30
skinparam ranksep 50

hide circle

top to bottom direction

title DTO-uri (Java records) folosite in API

package "Autentificare" as PA {
    class RegisterRequest <<record>> {
        + username : String
        + email : String
        + password : String
        + displayName : String
    }
    class LoginRequest <<record>> {
        + identifier : String
        + password : String
    }
    class GoogleLoginRequest <<record>> {
        + idToken : String
    }
    class AuthResponse <<record>> {
        + token : String
        + userId : Long
        + username : String
        + email : String
        + displayName : String
        + avatarUrl : String
    }
}

package "Profil si status" as PB {
    class UserDto <<record>> {
        + id : Long
        + username : String
        + email : String
        + displayName : String
        + avatarUrl : String
        + online : boolean
        + lastSeenAt : LocalDateTime
        + status : UserStatusDto
    }
    class UpdateProfileRequest <<record>> {
        + displayName : String
        + email : String
    }
    class UserStatusDto <<record>> {
        + statusText : String
        + statusType : String
        + setAt : LocalDateTime
    }
    class SetStatusRequest <<record>> {
        + statusText : String
        + statusType : String
    }
}

package "Chat-uri" as PC {
    class ChatDto <<record>> {
        + id : Long
        + type : String
        + name : String
        + otherUser : UserDto
        + members : List<UserDto>
        + createdAt : LocalDateTime
        + lastMessage : MessageDto
        + unreadCount : long
    }
    class CreateGroupRequest <<record>> {
        + name : String
        + memberIds : List<Long>
    }
}

package "Mesaje" as PD {
    class MessageDto <<record>> {
        + id : Long
        + chatId : Long
        + senderId : Long
        + senderUsername : String
        + content : String
        + attachmentUrl : String
        + attachmentName : String
        + attachmentType : String
        + createdAt : LocalDateTime
        + deliveryStatus : MessageDeliveryStatus
        + deliveredAt : LocalDateTime
        + readAt : LocalDateTime
    }
    class SendMessageDto <<record>> {
        + chatId : Long
        + content : String
        + attachmentUrl : String
        + attachmentName : String
        + attachmentType : String
    }
    class TypingIndicatorDto <<record>> {
        + chatId : Long
        + userId : Long
        + typing : boolean
    }
    class SearchMessagesRequest <<record>> {
        + query : String
        + chatId : Long
    }
    class MarkMessageReadRequest <<record>> {
        + messageId : Long
    }
}

' Aliniere intre records in cadrul fiecarui pachet -----------
RegisterRequest -[hidden]down- LoginRequest
LoginRequest -[hidden]down- GoogleLoginRequest
GoogleLoginRequest -[hidden]down- AuthResponse

UserDto -[hidden]down- UpdateProfileRequest
UpdateProfileRequest -[hidden]down- UserStatusDto
UserStatusDto -[hidden]down- SetStatusRequest

ChatDto -[hidden]down- CreateGroupRequest

MessageDto -[hidden]down- SendMessageDto
SendMessageDto -[hidden]down- TypingIndicatorDto
TypingIndicatorDto -[hidden]down- SearchMessagesRequest
SearchMessagesRequest -[hidden]down- MarkMessageReadRequest

' Pachetele aliniate pe orizontala
PA -[hidden]right- PB
PB -[hidden]right- PC
PC -[hidden]right- PD

' Compozitii intre DTOs --------------------------------------
ChatDto o-- "*" UserDto
ChatDto o-- "0..1" MessageDto
UserDto o-- "0..1" UserStatusDto

@enduml
